--- a/analyzer-cli/build.gradle
+++ b/analyzer-cli/build.gradle
@@ -1,11 +1,6 @@
 plugins {
-    id 'java'
     id 'org.jetbrains.kotlin.jvm'
 }
-
-apply plugin: 'application'
-apply plugin: 'kotlin'
-apply plugin: 'java'
 
 group 'osu.labs.coding-theory'
 version '1.0-SNAPSHOT'
@@ -13,8 +8,13 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 sourceSets {
-    main.java.srcDirs += 'src'
-    test.java.srcDirs += 'test'
+    main.java.srcDirs = ['src']
+    test.java.srcDirs = ['test']
+
+    main.kotlin.srcDirs = ['src']
+    test.kotlin.srcDirs = ['test']
+
+    main.resources.srcDirs = ['resources']
 }
 
 repositories {
@@ -39,7 +39,7 @@ compileTestKotlin {
 
 jar {
     manifest {
-        attributes 'Main-Class': 'osu.labs.codingTheory.analyzerCli.MainKt'
+        attributes 'Main-Class': 'analyzer.cli.MainKt'
     }
     from {
         configurations.compile.collect {
