--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,4 @@
 plugins {
-    id 'java'
     id 'org.jetbrains.kotlin.jvm' version '1.2.71'
 }
 
@@ -7,6 +6,16 @@ group 'osu.labs.coding-theory'
 version '1.0-SNAPSHOT'
 
 sourceCompatibility = 1.8
+
+sourceSets {
+    main.java.srcDirs = ['src']
+    test.java.srcDirs = ['test']
+
+    main.kotlin.srcDirs = ['src']
+    test.kotlin.srcDirs = ['test']
+
+    main.resources.srcDirs = ['resources']
+}
 
 repositories {
     mavenCentral()
