Fix the location of the test resource directory in the gradle modules

--- a/analyzer-cli/build.gradle
+++ b/analyzer-cli/build.gradle
@@ -15,6 +15,7 @@ sourceSets {
     test.kotlin.srcDirs = ['test']
 
     main.resources.srcDirs = ['resources']
+    test.resources.srcDirs = ['test']
 }
 
 repositories {
