huffman-code-lib: Add collecting of symbols stats and computing Huffman table for encoding

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,3 +3,5 @@ include ':analyzer-cli'
 include ':ascii-lib'
 include ':ascii-encoder-cli'
 include ':ascii-decoder-cli'
+include ':huffman-code-lib'
+include ':huffman-code-cli'
