--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ cmake-build-*/
 # Mongo Explorer plugin
 .idea/**/mongoSettings.xml
 
-# File-based project format
+# File-based project specification
 *.iws
 
 # IntelliJ
