huffman-code-decoder-cli: Initialize a CLI wrapper around huffman-code-lib to decode binary files

--- a/settings.gradle
+++ b/settings.gradle
@@ -4,4 +4,5 @@ include ':ascii-lib'
 include ':ascii-encoder-cli'
 include ':ascii-decoder-cli'
 include ':huffman-code-lib'
-include ':huffman-code-cli'
+include ':huffman-code-encoder-cli'
+include ':huffman-code-decoder-cli'
