arithmetic-coding-lib: Add entities to calculate code ranges from a string

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,4 @@ include ':ascii-decoder-cli'
 include ':huffman-code-lib'
 include ':huffman-code-encoder-cli'
 include ':huffman-code-decoder-cli'
+include ':arithmetic-coding-lib'
