arithmetic-coding-cli: Initialize a CLI wrapper around arithmetic-coding-lib

--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include ':huffman-code-lib'
 include ':huffman-code-encoder-cli'
 include ':huffman-code-decoder-cli'
 include ':arithmetic-coding-lib'
+include ':arithmetic-coding-cli'
